# gr4-torchdsp

./: .gitignore  Dockerfile  README.md  meson.build
bench/: bm_triton.py
blocklib/torchdsp/add/: add.yml  add_cpu.cc  add_cpu.h
blocklib/torchdsp/include/gnuradio/torchdsp/: api.h  buffer_triton.h  meson.build  triton_async_block.h  triton_model.h
blocklib/torchdsp/lib/: buffer_triton.cc  meson.build  triton_model_impl.cc  triton_model_impl.h
blocklib/torchdsp/python/torchdsp/: __init__.py
blocklib/torchdsp/python/torchdsp/bindings/: buffer_triton_pybind.cc  meson.build  triton_async_block_pybind.cc
blocklib/torchdsp/test/: test_custom_buffers.py  test_custom_buffers_async.py  test_fft_async.py  test_fft_sync.py
blocklib/torchdsp/triton_block/: triton_block.yml  triton_block_cpu.cc  triton_block_cpu.h  triton_block_triton.cc  triton_block_triton.h
domains/grc/: meson.build  triton.domain.yml
examples/: add_example.grc  untitled.py
models/fft_cpu_openvino/: config.pbtxt
schedulers/: meson.build
schedulers/triton/: meson.build  triton.scheduler.conf.yml
schedulers/triton/include/gnuradio/schedulers/triton/: graph_executor.h  meson.build  scheduler_triton.h  scheduler_triton_options.h  thread_wrapper.h
schedulers/triton/lib/: graph_executor.cc  meson.build  scheduler_triton.cc  thread_wrapper.cc
schedulers/triton/python/schedulers/triton/: __init__.py  meson.build
schedulers/triton/python/schedulers/triton/bindings/: meson.build  scheduler_triton_pybind.cc
